# ogc-api-dggs-rhealpix

./: .pre-commit-config.yaml  Dockerfile  LICENSE  pyproject.toml  requirements.txt
app/: main.py
app/routers/: dggsCore.py  dggsZQQuery.py  dggsZQSet.py
app/static/: home.html
